--- a/Basi Dati/README.me
+++ b/Basi Dati/README.me
@@ -1,4 +1,5 @@
 # Progetto-OOBD_T1G22
 Progetto di Basi di Dati a.a. 2022-2023 Paolo Tedesco Giulio Ruopolo Fabrizio Quaranta N86004408 N86004285 N86004300 Id Gruppo: OOBD_T1G22 Data: 23/01/2023.
 Il fil sql non ha bisogno di paticolari settaggi, dunque è possibilè utilizzarlo dell'immediata.
-Per quanto riguarda la ducumentazione le imaggini protrebbere afere problemi di risoluzione, abbiamo provveduto con l'aggiunta delle imaggini della apposita cartella" "
+Per quanto riguarda la ducumentazione le imaggini protrebbere afere problemi di risoluzione, abbiamo provveduto con l'aggiunta delle imaggini della apposita cartella 
+"Diagrammi"
