--- a/Basi Dati/README.me
+++ b/Basi Dati/README.me
@@ -1,6 +1,6 @@
 # Progetto-OOBD_T1G22
 Progetto di Basi di Dati a.a. 2022-2023 Paolo Tedesco Giulio Ruopolo Fabrizio Quaranta N86004408 N86004285 N86004300 Id Gruppo: OOBD_T1G22 Data: 23/01/2023.
 La cartella "Sql" contiene la creazione delle tabelle, procedure/funzioni e l'apposita poppolazione, i quali non hanno bisogni di particolari settaggi e sono pronti 
-ùall'immediata. È espressamente consigliato utilizzare le create table come sono riportate sul file.
+nell'immediata. È espressamente consigliato utilizzare le create table come sono riportate sul file.
 Per quanto riguarda la ducumentazione le imaggini protrebbere avere problemi di risoluzione, abbiamo provveduto con l'aggiunta delle imaggini della apposita cartella 
 "Diagrammi".
