--- a/Basi Dati/README.me
+++ b/Basi Dati/README.me
@@ -4,4 +4,4 @@ La cartella "Sql" contiene la creazione delle tabelle, procedure/funzioni e l'ap
 nell'immediata. È espressamente consigliato utilizzare le create table come sono riportate sul file.
 Per quanto riguarda la documentazione le immagini potrebbero avere problemi di risoluzione, abbiamo provveduto con l'aggiunta delle immagini dell' apposita cartella 
 "Diagrammi".
-La base di dati è stata realizata con l'utilizzo di "postgresql" versione "6.14" 
+La base di dati è stata realizata con l'utilizzo di "postgresql" versione "6.14".
