--- a/Basi Dati/README.me
+++ b/Basi Dati/README.me
@@ -2,6 +2,5 @@
 Progetto di Basi di Dati a.a. 2022-2023 Paolo Tedesco Giulio Ruopolo Fabrizio Quaranta N86004408 N86004285 N86004300 Id Gruppo: OOBD_T1G22 Data: 23/01/2023.
 La cartella "Sql" contiene la creazione delle tabelle, procedure/funzioni e l'apposita poppolazione, i quali non hanno bisogno di particolari settaggi e sono pronti 
 nell'immediata. È espressamente consigliato utilizzare le create table come sono riportate sul file.
-Per quanto riguarda la documentazione le immagini potrebbero avere problemi di risoluzione, abbiamo provveduto con l'aggiunta delle immagini dell' apposita cartella 
-"Diagrammi".
-La base di dati è stata realizata e testato con l'utilizzo del software "postgresql" versione "6.14".
+Per quanto riguarda i diagrammi del progetto, per visualizzarli singolarmente, abbiamo provveduto con l'aggiunta delle cartella"Diagrammi".
+La base di dati è stata realizata e testata con l'utilizzo del software "postgresql" versione "6.14".
