--- a/Basi Dati/README.me
+++ b/Basi Dati/README.me
@@ -1,4 +1,4 @@
-# Progetto-OOBD_T1G22
+## Progetto-OOBD_T1G22
 Progetto di Basi di Dati a.a. 2022-2023 Paolo Tedesco Giulio Ruopolo Fabrizio Quaranta N86004408 N86004285 N86004300 Id Gruppo: OOBD_T1G22 Data: 23/01/2023.
 La cartella "Sql" contiene la creazione delle tabelle, procedure/funzioni e l'apposita poppolazione.
 Per quanto riguarda i diagrammi del progetto, per visualizzarli singolarmente, abbiamo provveduto con l'aggiunta delle cartella"Diagrammi".
